<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_View_Name1" />

            <TextView
                android:id="@+id/textViewNumber1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewNumber1" />

            <Button
                android:id="@+id/buttonCall1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Call" />

            <Button
                android:id="@+id/buttonText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Text" />

            <TextView
                android:id="@+id/textViewName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_View_Name2" />

            <TextView
                android:id="@+id/textViewNumber2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewNumber2" />

            <Button
                android:id="@+id/buttonCall2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Call" />

            <Button
                android:id="@+id/buttonText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Text" />

            <TextView
                android:id="@+id/textViewName3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewName3" />

            <TextView
                android:id="@+id/textViewNumber3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewNumber3" />

            <Button
                android:id="@+id/buttonCall3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Call" />

            <Button
                android:id="@+id/buttonText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Text" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>